--- a/.gitignore
+++ b/.gitignore
@@ -285,3 +285,9 @@ demp/external/freetype/include/freetype/config/
 demp/external/freetype/include/freetype/
 
 demp/external/freetype/include/ft2build\.h
+
+demp/external/jSON/
+
+demp/path\.txt
+
+demp/settings\.txt
