--- a/.gitignore
+++ b/.gitignore
@@ -301,3 +301,5 @@ demp/external/filesystem-develop/filesystem-develop/
 demp/external/utf8_v2_3_4/doc/
 
 demp/external/utf8_v2_3_4/source/
+
+demp/external/taglib-1\.11\.1/
