--- a/.gitignore
+++ b/.gitignore
@@ -303,3 +303,5 @@ demp/external/utf8_v2_3_4/doc/
 demp/external/utf8_v2_3_4/source/
 
 demp/external/taglib-1\.11\.1/
+
+demp/external/id3lib-3\.8\.3/id3lib-3\.8\.3/
