11 new file types supported, textures loaded on compile time
+11 new music file types are supported
+textures now loaded on compile time from zip
-trying to associate new file types with app

--- a/.gitignore
+++ b/.gitignore
@@ -337,3 +337,13 @@ demp/external/bit7z-v2\.1\.0-msvc2015_x86/
 demp/external/zlib123dll/dll32/demo/
 
 demp/external/zlib123dll/
+
+demp/external/bit7z/include/
+
+demp/external/chilkat/include/
+
+demp/external/chilkat/
+
+demp/external/unzip101e/
+
+demp/external/
