new app size, few bug fixes
+app width changed
+23 music(and some video) file types supported
+new msi installer via "Advanced Installer" created, looks pretty fancy though

--- a/.gitignore
+++ b/.gitignore
@@ -347,3 +347,11 @@ demp/external/chilkat/
 demp/external/unzip101e/
 
 demp/external/
+
+installer/all/
+
+installer/ar/
+
+installer/demp-cache/
+
+installer/
